[workspace]
members = ["crates/*", "examples/app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/vespertide"
homepage = "https://github.com/dev-five-git/vespertide"
documentation = "https://docs.rs/vespertide"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.dependencies]
vespertide-core = { path = "crates/vespertide-core", version = "0.1.53", default-features = false }
vespertide-config = { path = "crates/vespertide-config", version = "0.1.53", default-features = false }
vespertide-loader = { path = "crates/vespertide-loader", version = "0.1.53", default-features = false }
vespertide-macro = { path = "crates/vespertide-macro", version = "0.1.53" }
vespertide-naming = { path = "crates/vespertide-naming", version = "0.1.53" }
vespertide-planner = { path = "crates/vespertide-planner", version = "0.1.53" }
vespertide-query = { path = "crates/vespertide-query", version = "0.1.53" }
vespertide-exporter = { path = "crates/vespertide-exporter", version = "0.1.53" }

[profile.dev]
debug = 1  # Line tables only — faster DWARF generation for large codegen output
