[package]
name = "vespertide-config"
version = "0.1.51"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Manages models/migrations directories and naming-case preferences"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"], optional = true }
schemars = { version = "1.2", optional = true }

[features]
default = ["cli", "schema"]
cli = ["dep:clap"]
schema = ["dep:schemars"]

[dev-dependencies]
serde_json = "1"
