[package]
name = "vespertide-core"
version = "0.1.53"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Data models for tables, columns, constraints, indexes, and migration actions"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "1.2", optional = true }
thiserror = "2"
vespertide-naming = { workspace = true }

[features]
default = ["schema"]
schema = ["dep:schemars"]

[dev-dependencies]
rstest = "0.26"
serde_json = "1"
