[package]
name = "vespertide-exporter"
version = "0.1.53"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Export vespertide table definitions into ORM-specific models"

[dependencies]
vespertide-core = { workspace = true }
vespertide-config = { workspace = true }
vespertide-naming = { workspace = true }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
insta = { version = "1.46", features = ["yaml"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
