[package]
name = "vespertide-macro"
version = "0.1.53"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Macro entry for runtime migration execution"

[lib]
proc-macro = true

[dependencies]
vespertide-core = { workspace = true }
vespertide-config = { workspace = true }
vespertide-loader = { workspace = true }
vespertide-query = { workspace = true }
vespertide-planner = { workspace = true }
syn = { version = "2.0", features = ["parsing", "proc-macro"] }
proc-macro2 = "1.0"

[dev-dependencies]
tempfile = "3"
runtime-macros = "1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
