[package]
name = "vespertide-planner"
version = "0.1.54"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Replays applied migrations to rebuild a baseline, then diffs against current models to compute the next migration plan"

[dependencies]
vespertide-core = { workspace = true }
vespertide-naming = { workspace = true }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
insta = "1.46"
