[package]
name = "vespertide-query"
version = "0.1.54"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Converts migration actions into SQL statements with bind parameters"

[dependencies]
vespertide-core = { workspace = true }
vespertide-naming = { workspace = true }
vespertide-planner = { workspace = true }
thiserror = "2"
sea-query = "0.32"

[dev-dependencies]
rstest = "0.26"
insta = "1.46"
