[package]
name = "vespertide-schema-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Emits JSON Schemas for vespertide models and migrations"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
schemars = "1.2"
serde_json = "1"
vespertide-core = { workspace = true, features = ["schema"] }
vespertide-config = { workspace = true, features = ["schema"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

