[package]
name = "vespertide"
version = "0.1.53"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Rust workspace for defining database schemas in JSON and generating migration plans and SQL from model diffs"

[dependencies]
vespertide-macro = { workspace = true }
vespertide-core = { workspace = true }
sea-orm = { version = "2.0.0-rc.37", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
